# hands-on-ai

./: .gitignore  404.html  AI-CONVERSATION  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTOR_INTEGRATION_PLAN.md  INSTRUCTOR_INTEGRATION_SUMMARY.md  MANIFEST.in  MIGRATION.md  Makefile  PROVIDER_AGNOSTIC_UPDATE.md  README-chatcraft.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  project_browser.html  pypi_upload.py  pyproject.toml  pytest.ini  relase.yml  requirements-dev.txt  requirements.txt  setup-py.py  setup.cfg  setup.py  simple_weather_agent_test.py  sitemap.xml  test_agent.py  test_ailabkit.py  test_hands_on_ai.py  version.json  weather_graph_agent_example.py
.githib/workflow/: pep517_compliance.yml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  ci.yml.disabled  pep517_compliance.yml  release.yml.disabled
agent-agent/: index.html
agent-agents/: index.html
agent-concepts/: index.html
agent-guide/: index.html
agent-tools/: index.html
ailabkit/: test_ailabkit.py
archive/: README.md  build_mini_projects_old.py  convert_references.py  split.py
archive/archive/: README.md  check_imports.py  test_spelling.md  update_mini_projects.py
authors/: index.html
bot-gallery/: index.html
bot-template/: index.html
chat-guide/: index.html
chatcraft/: config.py  get_response.py
chatcraft/data/: fallbacks.json
classroom-setup/: index.html
cli-guide/: index.html
configuration/: index.html
contributing/: index.html
docs/: agent-agent.md  agent-agents.md  agent-concepts.md  agent-guide.md  agent-tools.md  bot-gallery.md  bot-template.md  bots.md  chat-guide.md  classroom-setup.md  cli-guide.md  configuration.md  demo_notes  education-guide.md  index.md  llm-guide.md  migration.md  mini-project-template.md  mini-projects.md  ollama-guide.md  project_browser.html  rag-flow.md  rag-guide.md  rag-llm-explain.md  ragcraft-guide.md  ragcraft-llm-explainer.md
docs/projects/: advanced-journal-bot.md  bot-personality-menu-generator.md  build-your-own-personality-bot.md  choose-your-own-adventure.md  classroom-simulation-bot.md  code-explainer-tool.md  creative-writing-partner.md  data-visualization-dashboard.md  debate-interview-panel-dialogue-simulator.md  emotional-support-bot.md  (+16 more)
education-guide/: index.html
examples/: README.md  debug_agent_prompt.py  debug_json_agent.py  direct_model_test.py  enhanced_test_agent.py  json_agent.py  model_capabilities_test.py  model_utilities_demo.py  multi_format_agent_test.py  run_model_commands.py  simple_rag_example.py  simple_weather_agent_test.py  test_agent.py  test_model_cli.py  test_model_detection.py  test_ollama_api.py  weather_graph_agent_example.py
llm-guide/: index.html
migration/: index.html
mini-project-template/: index.html
mini-projects/: index.html
ollama-guide/: index.html
project-tools/: index.html
projects/: index.html
rag-flow/: index.html
rag-guide/: index.html
rag-llm-explain/: index.html
scripts/: README.md  build_zip.py  cleanup_root_examples.py  convert_spelling.py  generate_bot_gallery.py  generate_project_index.py  inject_version.py  lint_mini_projects.py  project_browser.py  split_mini_projects.py  update_project_names.py
search/: search_index.json
tests/: conftest.py  test_imports.py  test_response.py  test_version_sync.py
tools/: README.md  build_mini_projects.py  build_zip.py  check_imports.py  config.json  generate_bot_gallery.py  inject_version.py  lint_mini_projects.py  load_fallbacks.py  markdown_converter.py  project browser.html  project_browser.html  project_browser.py  split.py  split_and_overview.py
(+155 files in other folders)
