[build-system]
requires = ["setuptools>=61.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "chatcraft"
version = "0.1.0"
description = "Educational LLM bot personalities for classrooms"
authors = [
  { name = "Michael Borck", email = "michael@borck.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests", "typer"]

[project.scripts]
chatcraft = "chatcraft.cli:app"
ragcraft = "chatcraft.ragcraft.cli:app"

[project.optional-dependencies]
rag = ["python-docx", "pymupdf"]
dev = [
  "pytest",
  "build",
  "twine",
  "cython",
  "ruff",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "pymdown-extensions",
  "uv"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"chatcraft" = ["data/*.json"]

[project.urls]
Homepage = "https://github.com/teaching-repositories/chatcraft"
Documentation = "https://github.com/teaching-repositories/chatcraft"
Source = "https://github.com/teaching-repositories/chatcraft"
Issues = "https://github.com/teaching-repositories/chatcraft"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 100
exclude = ["build", "dist", ".venv"]
