[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ailabkit"
version = "0.1.0"
description = "AI Learning Lab Toolkit for classrooms"
authors = [
  { name = "Michael Borck", email = "michael@borck.me" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests", 
    "typer",
    "python-fasthtml",
    "python-docx", 
    "pymupdf", 
    "scikit-learn", 
    "numpy"
]

[project.scripts]
ailabkit = "ailabkit.cli:app"
chat = "ailabkit.chat.cli:app"
rag = "ailabkit.rag.cli:app"
agent = "ailabkit.agent.cli:app"

[tool.flit.module]
name = "ailabkit"

# Keep optional dependencies for backward compatibility and development
[project.optional-dependencies]
rag = []
chat = []
agent = []
dev = [
  "pytest",
  "build",
  "twine",
  "cython",
  "ruff",
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "pymdown-extensions",
  "uv"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ailabkit" = [
    "chat/data/*.json",
    "rag/data/samples/*"
]

[project.urls]
Homepage = "https://github.com/teaching-repositories/ailabkit"
Documentation = "https://github.com/teaching-repositories/ailabkit"
Source = "https://github.com/teaching-repositories/ailabkit"
Issues = "https://github.com/teaching-repositories/ailabkit"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 100
exclude = ["build", "dist", ".venv"]