[metadata]
name = ailabkit
version = 0.1.0
description = AI Learning Lab Toolkit for classrooms
author = Michael Borck
author_email = michael@borck.me
license = MIT
url = https://github.com/teaching-repositories/ailabkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests
    typer
    python-fasthtml
    python-docx
    pymupdf
    scikit-learn
    numpy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ailabkit = ailabkit.cli:app
    chat = ailabkit.chat.cli:app
    rag = ailabkit.rag.cli:app
    agent = ailabkit.agent.cli:app